# ivory-tower-stm32

./: .gitignore  .travis.yml  Makefile  Makefile.sandbox  README.md  stack-7.10.yaml  stack-7.8.yaml  stack-8.0.2.yaml  stack-8.0.yaml  stack.mk  stack.yaml
ivory-bsp-stm32/: Makefile  Makefile.deps  ivory-bsp-stm32.cabal
ivory-bsp-stm32/src/Ivory/BSP/ARMv7M/: SysTick.hs
ivory-bsp-stm32/src/Ivory/BSP/STM32/: ClockConfig.hs  Config.hs  Init.hs  Interrupt.hs  LinkerScript.hs  PlatformClock.hs  Processor.hs  VectorTable.hs
ivory-bsp-stm32/src/Ivory/BSP/STM32/ClockConfig/: Init.hs
ivory-bsp-stm32/src/Ivory/BSP/STM32/Driver/: CAN.hs  DMA.hs  I2C.hs  RNG.hs  RingBuffer.hs  SPI.hs  UART.hs
ivory-bsp-stm32/src/Ivory/BSP/STM32/Driver/CAN/: Sched.hs
ivory-bsp-stm32/src/Ivory/BSP/STM32/Driver/I2C/: I2CDeviceAddr.hs  I2CDriverState.hs
ivory-bsp-stm32/src/Ivory/BSP/STM32/Driver/SPI/: SPIDeviceHandle.hs
ivory-bsp-stm32/src/Ivory/BSP/STM32/Driver/UART/: DMA.hs
ivory-bsp-stm32/src/Ivory/BSP/STM32/Driver/UART/DMA/: Synchronous.hs
ivory-bsp-stm32/src/Ivory/BSP/STM32/Peripheral/: ADC.hs  ATIM18.hs  DMA.hs  GTIM2345.hs  RNG.hs
ivory-bsp-stm32/src/Ivory/BSP/STM32/Peripheral/ADC/: Peripheral.hs  RegTypes.hs  Regs.hs
ivory-bsp-stm32/src/Ivory/BSP/STM32/Peripheral/ATIM18/: RegTypes.hs  Regs.hs
ivory-bsp-stm32/src/Ivory/BSP/STM32/Peripheral/CAN/: Peripheral.hs  Regs.hs
ivory-bsp-stm32/src/Ivory/BSP/STM32/Peripheral/DMA/: Artifacts.hs  Peripheral.hs  Regs.hs  Types.hs
ivory-bsp-stm32/src/Ivory/BSP/STM32/Peripheral/GPIOF4/: Peripheral.hs  TH.hs
ivory-bsp-stm32/src/Ivory/BSP/STM32/Peripheral/GTIM2345/: Peripheral.hs  RegTypes.hs  Regs.hs
ivory-bsp-stm32/src/Ivory/BSP/STM32/Peripheral/I2C/: Peripheral.hs
ivory-bsp-stm32/src/Ivory/BSP/STM32/Peripheral/RNG/: Peripheral.hs  Regs.hs
ivory-bsp-stm32/src/Ivory/BSP/STM32/Peripheral/SPI/: Peripheral.hs
ivory-bsp-stm32/src/Ivory/BSP/STM32/Peripheral/UART/: DMA.hs  Peripheral.hs
ivory-bsp-stm32/src/Ivory/BSP/STM32F405/: ADC.hs  CAN.hs  ClockConfig.hs  GPIO.hs  I2C.hs  Init.hs  Interrupt.hs  InterruptInstance.hs  MemoryMap.hs  RCC.hs  RNG.hs  SPI.hs  UART.hs
ivory-bsp-stm32/src/Ivory/BSP/STM32F405/GPIO/: Ports.hs
ivory-bsp-stm32/src/Ivory/BSP/STM32F427/: ADC.hs  ATIM18.hs  CAN.hs  DMA.hs  GPIO.hs  GTIM2345.hs  I2C.hs  Interrupt.hs  MemoryMap.hs  RCC.hs  RNG.hs  SPI.hs  UART.hs
ivory-bsp-stm32/src/Ivory/BSP/STM32F427/GPIO/: AF.hs  Pins.hs  Ports.hs
ivory-bsp-stm32/src/Ivory/BSP/STM32F427/UART/: DMA.hs
ivory-bsp-stm32/support/: ref_to_uint32.c  ref_to_uint32.h  vector_table.s.template
ivory-bsp-tests/: .gitignore  Makefile  Makefile.deps  ivory-bsp-tests.cabal
ivory-bsp-tests/BSP/Tests/: LED.hs  Platforms.hs  RNG.hs
ivory-bsp-tests/BSP/Tests/CAN/: TestApp.hs
ivory-bsp-tests/BSP/Tests/DMAUART/: TestApp.hs
ivory-bsp-tests/BSP/Tests/I2C/: TestApp.hs
ivory-bsp-tests/BSP/Tests/LED/: Blink.hs  TestApp.hs
ivory-bsp-tests/BSP/Tests/SPI/: TestApp.hs
ivory-bsp-tests/BSP/Tests/UART/: Buffer.hs  DebugApp.hs  TestApp.hs  TestStateMachine.hs  Types.hs
ivory-bsp-tests/tests/: CANAADLTest.hs  CANTest.hs  DMATest.hs  DMAUARTAADLTest.hs  DMAUARTTest.hs  I2CAADLTest.hs  I2CFuzzer.hs  I2CTest.hs  LEDAADLTest.hs  LEDTest.hs  RNGTest.hs  SPITest.hs  UARTAADLTest.hs  UARTStateMachineTest.hs  UARTTest.hs
ivory-freertos-bindings/: Makefile  ivory-freertos-bindings.cabal
ivory-freertos-bindings/freertos-sources/: FreeRTOSConfig.h.template  queue.c
ivory-freertos-bindings/freertos-sources/portable/GCC/ARM_CM4F/: port.c
ivory-freertos-bindings/freertos-sources/portable/MemMang/: heap_4.c  heap_5.c
ivory-freertos-bindings/src/Ivory/OS/: FreeRTOS.hs
ivory-freertos-bindings/src/Ivory/OS/FreeRTOS/: Atomic.hs  BinarySemaphore.hs  Config.hs  Mutex.hs  Task.hs  TaskArg.hs  Time.hs  Types.hs
ivory-freertos-bindings/syscalls/: assert.h
ivory-freertos-bindings/wrapper/: freertos_mutex_wrapper.c  freertos_mutex_wrapper.h  freertos_semaphore_wrapper.c  freertos_semaphore_wrapper.h  freertos_task_wrapper.c  freertos_task_wrapper.h  freertos_time_wrapper.c
tower-echronos-stm32/: Makefile  Makefile.deps  tower-echronos-stm32.cabal
tower-freertos-dummy/: tower-freertos-dummy.cabal
tower-freertos-dummy/src/Ivory/OS/FreeRTOS/Tower/: Dummy.hs
tower-freertos-dummy/src/Ivory/OS/FreeRTOS/Tower/Dummy/: Build.hs  Monitor.hs  Signal.hs  System.hs  Time.hs
tower-freertos-dummy/support/: dummy_freertos_init.c  dummy_freertos_init.h  dummy_freertos_user_assert.c
tower-freertos-stm32/: Makefile  Makefile.deps  tower-freertos-stm32.cabal
tower-freertos-stm32-tests/: .gitignore  Makefile  Makefile.deps  default.conf  tower-freertos-stm32-tests.cabal
tower-freertos-stm32-tests/examples/: Blink.hs  Simple.hs  StateMachine.hs
tower-freertos-stm32-tests/freertos-bindings-test/: Main.hs
tower-freertos-stm32/src/Ivory/OS/FreeRTOS/: Tower.hs
tower-freertos-stm32/src/Ivory/OS/FreeRTOS/Tower/: Monitor.hs  STM32.hs  STM32F4.hs  Signal.hs  System.hs  Time.hs
tower-freertos-stm32/src/Ivory/OS/FreeRTOS/Tower/STM32/: Build.hs  Config.hs
tower-freertos-stm32/src/Ivory/OS/FreeRTOS/Tower/STM32F4/: Build.hs
tower-freertos-stm32/support/: linker_script.lds.template  stm32_freertos_init.c
