
name:                ivory-bsp-tests
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
author:              Galois, Inc.
maintainer:          pat@galois.com
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     BSP.Tests.LED,
                       BSP.Tests.LED.Blink,
                       BSP.Tests.LED.TestApp,
                       BSP.Tests.I2C.TestApp,
                       BSP.Tests.CAN.TestApp,
                       BSP.Tests.RNG,
                       BSP.Tests.Platforms,

                       BSP.Tests.SPI.TestApp
                       BSP.Tests.UART.Types,
                       BSP.Tests.UART.Buffer,
                       BSP.Tests.UART.TestApp,

                       BSP.Tests.DMAUART.TestApp

  build-depends:       base >= 4.6,
                       monadLib,
                       ivory,
                       ivory-stdlib,
                       ivory-hw,
                       tower              >= 0.9,
                       tower-config,
                       tower-hal,
                       tower-freertos-stm32 >= 0.9,
                       ivory-bsp-stm32

  default-language:    Haskell2010
  ghc-options:         -Wall

executable bsp-led-test-gen
  main-is:             LEDTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-hw,
                       tower                >= 0.9,
                       tower-config,
                       tower-freertos-stm32 >= 0.9,
                       ivory-bsp-stm32,
                       ivory-bsp-tests
  ghc-options:          -Wall

executable bsp-spi-test-gen
  main-is:             SPITest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-bsp-tests

  ghc-options:          -Wall

executable bsp-i2c-test-gen
  main-is:             I2CTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-bsp-tests
  ghc-options:          -Wall

executable bsp_i2c_aadl_test_gen
  main-is:             I2CAADLTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.9,
                       tower-aadl,
                       tower-config,
                       tower-freertos-stm32,
                       tower-echronos-stm32,
                       ivory-bsp-stm32,
                       ivory-bsp-tests
  ghc-options:          -Wall



executable bsp-uart-test-gen
  main-is:             UARTTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-bsp-tests
  ghc-options:          -Wall

executable bsp_uart_aadl_test_gen
  main-is:             UARTAADLTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.9,
                       tower-aadl,
                       tower-config,
                       tower-echronos-stm32,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-bsp-tests
  ghc-options:          -Wall

executable bsp-dma-uart-test-gen
  main-is:             DMAUARTTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-bsp-tests
  ghc-options:          -Wall

executable bsp_dma_uart_aadl_test_gen
  main-is:             DMAUARTAADLTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.9,
                       tower-config,
                       tower-aadl,
                       tower-freertos-stm32,
                       tower-echronos-stm32,
                       ivory-bsp-stm32,
                       ivory-bsp-tests
  ghc-options:          -Wall

executable bsp-can-test-gen
  main-is:             CANTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-bsp-tests
  ghc-options:          -Wall

executable bsp_can_aadl_test_gen
  main-is:             CANAADLTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.9,
                       tower-config,
                       tower-aadl,
                       tower-freertos-stm32,
                       tower-echronos-stm32,
                       ivory-bsp-stm32,
                       ivory-bsp-tests
  ghc-options:          -Wall


executable bsp-rng-test-gen
  main-is:             RNGTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-bsp-tests
  ghc-options:          -Wall

executable bsp-dma-test
  main-is:             DMATest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-bsp-tests
  ghc-options:          -Wall

executable bsp_led_aadl_test_gen
  main-is:             LEDAADLTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-hw,
                       tower                >= 0.9,
                       tower-aadl,
                       tower-config,
                       tower-freertos-stm32 >= 0.9,
                       ivory-bsp-stm32,
                       tower-echronos-stm32,
                       ivory-bsp-tests
  ghc-options:          -Wall

executable bsp-i2c-fuzzer-gen
  main-is:             I2CFuzzer.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-hw,
                       tower                >= 0.9,
                       tower-config,
                       tower-freertos-stm32 >= 0.9,
                       ivory-bsp-stm32,
                       ivory-bsp-tests
  ghc-options:          -Wall
