name:                tower-freertos-stm32-tests
version:             0.9.0.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

flag werror
  default:              False
  description:          Pass -Werror to GHC.

executable tower-example-simple
  main-is:             Simple.hs
  hs-source-dirs:      examples
  ghc-options:          -Wall
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       tower-config,
                       tower >= 0.9,
                       ivory-bsp-stm32,
                       tower-freertos-stm32 >= 0.9
  if flag(werror)
    ghc-options:        -Wall -Werror
  else
    ghc-options:        -Wall
  default-language:    Haskell2010

executable freertos-bindings-test
  main-is:             Main.hs
  hs-source-dirs:      freertos-bindings-test
  ghc-options:          -Wall
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-artifact,
                       ivory-backend-c,
                       ivory-freertos-bindings
  if flag(werror)
    ghc-options:        -Wall -Werror
  else
    ghc-options:        -Wall
  default-language:    Haskell2010

