name:                tower-freertos-stm32
version:             0.9.0.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

data-files: support/stm32_freertos_init.c,
            support/stm32_freertos_init.h,
            support/stm32_freertos_user_assert.c,
            support/px_mkfw.py,
            support/px_uploader.py,
            support/px4fmu-v1.prototype,
            support/px4fmu-v2.prototype

library
  exposed-modules:      Ivory.OS.FreeRTOS.Tower.STM32,
                        Ivory.OS.FreeRTOS.Tower.STM32.Build,
                        Ivory.OS.FreeRTOS.Tower.Monitor,
                        Ivory.OS.FreeRTOS.Tower.Signal,
                        Ivory.OS.FreeRTOS.Tower.System,
                        Ivory.OS.FreeRTOS.Tower.Time

  other-modules:        Paths_tower_freertos_stm32

  build-depends:        base >= 4.6,
                        base-compat >= 0.6,
                        template-haskell >= 2.8,
                        filepath,
                        containers,
                        mainland-pretty,
                        pretty-show,
                        ivory,
                        ivory-hw,
                        ivory-artifact,
                        ivory-stdlib,
                        ivory-backend-c,
                        ivory-freertos-bindings,
                        ivory-bsp-stm32,
                        tower-config,
                        tower >= 0.9

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-orphans
